...
        android:textColor="@color/chronometer"
        android:visibility="invisible"
        android:textSize="25sp"
        />

    <ImageButton
        android:id="@+id/video_capture_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/recording_button"
        />

    <ImageButton
        android:id="@+id/button_open_gallery"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintLeft_toRightOf="@+id/video_capture_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
...
